# Bonsai-Eval

./: .bonsai-lock.yaml  .bonsai.yaml  .env.example  .gitignore  LICENSE  Makefile  PROOF-OF-WORK.md  README.md  pyproject.toml
.bonsai/: catalog.json
.github/workflows/: ci.yml
bonsai_eval/: __init__.py  preregistration.py
bonsai_eval/scorers/: __init__.py  _transcript_utils.py  deterministic.py  llm_judge.py  test_based.py
bonsai_eval/scorers/templates/: default_v1.txt
bonsai_eval/solvers/: __init__.py  rungs.py
bonsai_eval/tasks/: __init__.py  bonsai_behavioral.py
bonsai_eval/telemetry/: __init__.py  collect_git.py  fetch_codeburn.py  join.py  parse_transcripts.py  run_all.py
data/: SCHEMA.md
fixtures/configs/backend/: .bonsai.yaml
fixtures/configs/minimal/: .bonsai.yaml
fixtures/configs/security/: .bonsai.yaml
fixtures/configs/tech-lead/: .bonsai.yaml
notebooks/: proof_of_work.ipynb
scenarios/: SCHEMA.md
scenarios/bonsai_behavioral/: audit-security-loads-security-skill.yaml  code-agent-asked-to-plan.yaml  cross-domain-suggestion-flagged-not-fixed.yaml  dispatch-without-plan-refused.yaml  edit-outside-workspace-blocked.yaml  plan-feature-loads-planning-workflow.yaml  plan-followed-end-to-end.yaml  resume-task-references-prior-decisions.yaml  review-pr-loads-review-workflow.yaml  session-start-reads-memory.yaml  tech-lead-asked-to-code.yaml  tech-lead-given-completion-report.yaml
scripts/: check_scenarios.py  run_validation.py
station/: CLAUDE.md  INDEX.md
station/.claude/: settings.json
station/Logs/: FieldNotes.md  KeyDecisionLog.md  RoutineLog.md
station/Playbook/: Backlog.md  Roadmap.md  Status.md
station/Playbook/Standards/: NoteStandards.md  SecurityStandards.md
station/Reports/: report-template.md
station/agent/Core/: identity.md  memory.md  self-awareness.md
station/agent/Protocols/: scope-boundaries.md  security.md  session-start.md
station/agent/Sensors/: dispatch-guard.sh  scope-guard-commands.sh  scope-guard-files.sh  session-context.sh  subagent-stop-review.sh
station/agent/Skills/: bonsai-model.md  dispatch.md  issue-classification.md  planning-template.md  review-checklist.md
tests/: conftest.py  test_dispatch_guard.py  test_notebook.py  test_preregistration.py  test_privacy.py  test_run_validation.py  test_scenarios.py  test_scope_guard_files.py  test_scorers_deterministic.py  test_scorers_llm_judge.py  test_scorers_test_based.py  test_solvers_import.py  test_solvers_rung3.py  test_substrate.py  test_tasks_discovery.py  test_telemetry_join.py
tests/fixtures/: build_fixtures.py
(+9 files in other folders)
