[project]
name = "bonsai-eval"
version = "0.0.1"
description = "Eval harness and telemetry pipeline for measuring Bonsai effectiveness."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "LastStep" }]
keywords = ["bonsai", "claude-code", "eval", "inspect-ai", "telemetry"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# --- EXACT pins (Plan 38 §P0.1 + §Risks #8) ---
# Only `claude-agent-sdk` is allowed a `>=` floor per the dispatch brief.
dependencies = [
    "inspect-ai==0.3.219",
    "inspect-swe==0.2.51",
    "anthropic==0.100.0",
    "claude-agent-sdk>=0.1.77",
    "pandas==3.0.2",
    "pyarrow==24.0.0",
    "duckdb==1.5.2",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.12",
    "mypy==2.0.0",
    "pandas-stubs",
    "types-python-dateutil",
]
notebook = [
    "ipykernel==7.2.0",
    "matplotlib==3.10.9",
    "nbformat==5.10.4",
    "nbconvert==7.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bonsai_eval"]

# --- pytest ---
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
markers = [
    "requires_api: test requires ANTHROPIC_API_KEY and incurs paid API calls",
]
filterwarnings = [
    "error",
    # inspect-ai / pyarrow occasionally emit deprecation warnings on import
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = true
exclude = [
    "tests/",
    "notebooks/",
    "data/",
]

[[tool.mypy.overrides]]
module = "bonsai_eval.telemetry.*"
# Telemetry layer reads heterogeneous JSON — relax some strict checks.
disallow_any_explicit = false
